--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
         <nav class="ct-navigation">
             <div class="ct-header">
                 <div class="header-logo"> imagem sults </div>
+                <div class="header-close-btn">
+                    <button type="button" class="close-btn" aria-label="Fechar">
+                        <svg width="24" height="24" fill="currentColor" focusable="false" viewBox="0 0 24 24">
+                            <path
+                                d="m19.629 5.915-1.2-1.2-6.257 6.257-6.258-6.257-1.2 1.2 6.258 6.257-6.258 6.257 1.2 1.2 6.258-6.257 6.257 6.257 1.2-1.2-6.258-6.257 6.258-6.257Z">
+                            </path>
+                        </svg>
+                    </button>
+                </div>
                 <div class="stepper">
                     <div class="progress">
                         <div class="progress-bar" style="width: 0%;"></div>
@@ -24,24 +33,16 @@
                         <li class="step active" aria-current="step" style="left: 25%;">
                             <span class="step-label">Nome da empresa</span>
                         </li>
-                        <li class="step" aria-current="false" style="left: 60%;">
+                        <li class="step" aria-current="false" style="left: 65%;">
                             <span class="step-label">E-mail corporativo</span>
                         </li>
-                        <li class="step" aria-current="false" style="left: 90%; width: 100%;">
-                            <span class="step-label">Telefone com DDD</span>
+                        <li class="step" aria-current="false" style="left: 100%;">
+                            <span class="step-label">Telefone</span>
                         </li>
                     </ol>
                 </div>
                 
-                <div class="header-close-btn">
-                    <button type="button" class="close-btn" aria-label="Fechar">
-                        <svg width="24" height="24" fill="currentColor" focusable="false" viewBox="0 0 24 24">
-                            <path
-                                d="m19.629 5.915-1.2-1.2-6.257 6.257-6.258-6.257-1.2 1.2 6.258 6.257-6.258 6.257 1.2 1.2 6.258-6.257 6.257 6.257 1.2-1.2-6.258-6.257 6.258-6.257Z">
-                            </path>
-                        </svg>
-                    </button>
-                </div>
+
             </div>
         </nav>
     </header>
@@ -54,7 +55,7 @@
                     <div class="ct-form">
                         <div class="title">
                             <h1>Crie sua conta SULTS grátis</h1>
-                            <p>subtitulo</p>
+                            <p>Centralize e aumente a eficiência em toda operação</p>
                         </div>
                         <form id="form-nome">
 
@@ -79,22 +80,27 @@
                             <button class="btn-form" type="button">Continuar</button>
                         </form>
                     </div>
+                    <p class="termos">Ao se cadastrar, você aceita os nossos 
+                        <a target="_blank" href="/terms-and-conditions">Termos de Uso</a> e a nossa 
+                        <a target="_blank" href="/privacy-policy">Política de Privacidade</a>.
+                    </p>
                 </div>
             </div>
         </section>
 
                 <!-- company -->
                 <section id="ct-company" class="slide">
+                    <div class="teste2">
                     <div class="teste">
-                        <div class="teste2">
-                            <button class="back-button" type="button" aria-live="off">
-                                <svg width="16" height="16" fill="currentColor" focusable="false" viewBox="0 0 24 24">
-                                    <path
-                                        d="M22.286 11.316H4.629l7.114-7.114-1.2-1.2-8.572 8.571a.829.829 0 0 0 0 1.2l8.572 8.572 1.2-1.2-7.114-7.114h17.657v-1.715Z">
-                                    </path>
-                                </svg>
-                                <span class="back-button-text">Voltar</span>
-                            </button>
+                        <button class="back-button" type="button" aria-live="off">
+                            <svg width="16" height="16" fill="currentColor" focusable="false" viewBox="0 0 24 24">
+                                <path
+                                    d="M22.286 11.316H4.629l7.114-7.114-1.2-1.2-8.572 8.571a.829.829 0 0 0 0 1.2l8.572 8.572 1.2-1.2-7.114-7.114h17.657v-1.715Z">
+                                </path>
+                            </svg>
+                            <span class="back-button-text">Voltar</span>
+                        </button>
+                        
                             <div class="ct-form">
                                 <div class="title">
                                     <h1>Company</h1>
@@ -180,10 +186,7 @@
                             <button type="button" class="social-button apple" aria-label="Entrar com Apple"></button>
                         </div>
                     </div> -->
-                    <p class="termos">Ao se cadastrar, você aceita os nossos 
-                        <a target="_blank" href="/terms-and-conditions">Termos de Uso</a> e a nossa 
-                        <a target="_blank" href="/privacy-policy">Política de Privacidade</a>.
-                    </p>
+
                 </div>
             </div>
         </section>
