--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             <div class="ct-header">
                 <div class="header-logo"> imagem sults </div>
                 <div class="header-close-btn">
+                    <button class="back-button header-btn" type="button" aria-live="off">
+                        <svg width="16" height="16" fill="currentColor" focusable="false" viewBox="0 0 24 24">
+                            <path d="M22.286 11.316H4.629l7.114-7.114-1.2-1.2-8.572 8.571a.829.829 0 0 0 0 1.2l8.572 8.572 1.2-1.2-7.114-7.114h17.657v-1.715Z"></path>
+                        </svg>
+                    </button>
                     <button type="button" class="close-btn" aria-label="Fechar">
                         <svg width="24" height="24" fill="currentColor" focusable="false" viewBox="0 0 24 24">
                             <path
