--- a/index.html
+++ b/index.html
@@ -14,11 +14,6 @@
             <div class="ct-header">
                 <div class="header-logo"> imagem sults </div>
                 <div class="header-close-btn">
-                    <button class="back-button header-btn" type="button" aria-live="off">
-                        <svg width="16" height="16" fill="currentColor" focusable="false" viewBox="0 0 24 24">
-                            <path d="M22.286 11.316H4.629l7.114-7.114-1.2-1.2-8.572 8.571a.829.829 0 0 0 0 1.2l8.572 8.572 1.2-1.2-7.114-7.114h17.657v-1.715Z"></path>
-                        </svg>
-                    </button>
                     <button type="button" class="close-btn" aria-label="Fechar">
                         <svg width="24" height="24" fill="currentColor" focusable="false" viewBox="0 0 24 24">
                             <path
@@ -32,19 +27,19 @@
                         <div class="progress-bar" style="width: 0%;"></div>
                     </div>
                     <ol class="steps">
-                        <li class="step clickable" aria-current="false" style="left: 0%;">
-                            <button type="button" class="step-label">Nome</button>
-                        </li>
-                        <li class="step active" aria-current="step" style="left: 25%;">
+                        <div class="step clickable active" aria-current="false" style="left: 0%;">
+                            <span type="button" class="step-label">Nome</span>
+                        </div>
+                        <div class="step" aria-current="step" style="left: 25%;">
                             <span class="step-label">Nome da empresa</span>
-                        </li>
-                        <li class="step" aria-current="false" style="left: 65%;">
+                        </div>
+                        <div class="step" aria-current="false" style="left: 65%;">
                             <span class="step-label">E-mail
                                 corporativo</span>
-                        </li>
-                        <li class="step" aria-current="false" style="left: 100%;">
+                            </div>
+                        <div class="step" aria-current="false" style="left: 100%;">
                             <span class="step-label">Telefone</span>
-                        </li>
+                        </div>
                     </ol>
                 </div>
 
@@ -197,15 +192,6 @@
                         <button id="closeModalError">Fechar</button>
                     </div>
 
-                    <!-- <div class="social-login">
-                        <p class="subtitle-social">Ou entre com</p>
-                        <div class="social-buttons">
-                            <button type="button" class="social-button google" aria-label="Entrar com Google"></button>
-                            <button type="button" class="social-button facebook" aria-label="Entrar com Facebook"></button>
-                            <button type="button" class="social-button apple" aria-label="Entrar com Apple"></button>
-                        </div>
-                    </div> -->
-
                 </div>
             </div>
         </section>
@@ -232,76 +218,6 @@
                             <form id="form-phone">
                                 <label for="phone-number" class="states-number">Número de telefone</label>
                                 <div class="inputPhone">
-                                    <select name="uf" id="uf">
-                                        <option value>DDD</option>
-                                        <option value="11">11</option>
-                                        <option value="12">12</option>
-                                        <option value="13">13</option>
-                                        <option value="14">14</option>
-                                        <option value="15">15</option>
-                                        <option value="16">16</option>
-                                        <option value="17">17</option>
-                                        <option value="18">18</option>
-                                        <option value="19">19</option>
-                                        <option value="21">21</option>
-                                        <option value="22">22</option>
-                                        <option value="24">24</option>
-                                        <option value="27">27</option>
-                                        <option value="28">28</option>
-                                        <option value="31">31</option>
-                                        <option value="32">32</option>
-                                        <option value="33">33</option>
-                                        <option value="34">34</option>
-                                        <option value="35">35</option>
-                                        <option value="37">37</option>
-                                        <option value="38">38</option>
-                                        <option value="41">41</option>
-                                        <option value="42">42</option>
-                                        <option value="43">43</option>
-                                        <option value="44">44</option>
-                                        <option value="45">45</option>
-                                        <option value="46">46</option>
-                                        <option value="47">47</option>
-                                        <option value="48">48</option>
-                                        <option value="49">49</option>
-                                        <option value="51">51</option>
-                                        <option value="53">53</option>
-                                        <option value="54">54</option>
-                                        <option value="55">55</option>
-                                        <option value="61">61</option>
-                                        <option value="62">62</option>
-                                        <option value="63">63</option>
-                                        <option value="64">64</option>
-                                        <option value="65">65</option>
-                                        <option value="66">66</option>
-                                        <option value="67">67</option>
-                                        <option value="68">68</option>
-                                        <option value="69">69</option>
-                                        <option value="71">71</option>
-                                        <option value="73">73</option>
-                                        <option value="74">74</option>
-                                        <option value="75">75</option>
-                                        <option value="77">77</option>
-                                        <option value="79">79</option>
-                                        <option value="81">81</option>
-                                        <option value="82">82</option>
-                                        <option value="83">83</option>
-                                        <option value="84">84</option>
-                                        <option value="85">85</option>
-                                        <option value="86">86</option>
-                                        <option value="87">87</option>
-                                        <option value="88">88</option>
-                                        <option value="89">89</option>
-                                        <option value="91">91</option>
-                                        <option value="92">92</option>
-                                        <option value="93">93</option>
-                                        <option value="94">94</option>
-                                        <option value="95">95</option>
-                                        <option value="96">96</option>
-                                        <option value="97">97</option>
-                                        <option value="98">98</option>
-                                        <option value="99">99</option>
-                                    </select>
                                     <input id="phone" name="phone" autocomplete="phone" type="phone" class="form-input"
                                         title="Insira seu numero de telefone" aria-label="Insira seu numero de telefone"
                                         oninput="applyPhoneMask(this)" maxlength="15" value>
@@ -319,8 +235,6 @@
                                     </span>
                                     <div id="error-phone" class="login-error-message"> </div>
                                 </div>
-
-
 
                                 <button class="btn-form" type="submit">Criar
                                     conta grátis</button>
