button submit e alinhamento

--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@
                                 </span>
                                 <div role="alert" class="login-error-message" id="error-phone"> </div>
                             </div>
-                            <button class="btn-form" type="submit">Criar conta grátis</button>
+                            <button class="btn-form" type="button" aria-label="Criar conta grátis"
+                            onclick="RegisterFormSubmit()">Criar conta grátis</button>
                         </form>
                     </div>
                 </div>
