Tudo funcionando, faltando apenas ajustes de responsividade e centralização

--- a/finally.html
+++ b/finally.html
@@ -1052,7 +1052,7 @@ window.addEventListener('load', updateImg);
 			
 				function sendAsgard(name, company, email, phone) {
 					let xhr = new XMLHttpRequest();
-					xhr.open("POST", "https://3sksqeptx3.execute-api.us-east-1.amazonaws.com/prod/site/request-demo");
+					xhr.open("POST", "");
 					xhr.setRequestHeader("Content-Type", "application/json");
 			
 					xhr.onload = function () {
