--- a/teste.html
+++ b/teste.html
@@ -940,7 +940,7 @@ p {
         }
         else {
             if (formStepNum === 0)
-                stepper.style.display = "none";
+            stepper.style.display = "none";
         }
     }
     
@@ -1066,7 +1066,7 @@ p {
 
     function sendAsgard(name, company, email, phone) {
         let xhr = new XMLHttpRequest();
-        xhr.open("POST", "https://3sksqeptx3.execute-api.us-east-1.amazonaws.com/prod/site/request-demo");
+        xhr.open("POST", "");
         xhr.setRequestHeader("Content-Type", "application/json");
 
         xhr.onload = function () {
